Fix about page desktop view spacing by changing main flex direction to row and justifying content evenly. Remove margins and absolute positioning for responsiveness.

--- a/css/original-about-style.css
+++ b/css/original-about-style.css
@@ -361,12 +361,11 @@ main h1 {
 
     /* ---------- Main ---------- */
     main {
-        flex-direction: row;
-        justify-content: space-evenly;
+        display: unset;
     }
 
     main section {
-        margin: 0;
+        margin-right: 12rem;
     }
 
     main h1 {
@@ -380,15 +379,26 @@ main h1 {
         display: flex;
         flex-direction: column;
         justify-content: center;
+
+        position: absolute;
+        right: 0;
+        bottom: 0;
+
         border-top-left-radius: 10px;
     }
 
     .flex-container {
         height: calc(100vh - 69px);
+        width: 50vw;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+
+        position: absolute;
+        left: 0;
+        bottom: 0;
+
         border-top-right-radius: 10px;
     }
 
